# eidolonsimulacra.github.io

./: .coverage  .coveragerc  .env.example  .gitignore  .htaccess  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_AUDIT_REPORT.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  MANIFEST.in  QUICKSTART.md  README.md  REVIEW_FIXES_COMPLETED.md  REVIEW_FIXES_SUMMARY.md  SECURITY.md  STRICT_SENIOR_REVIEW.md  TODO.md  a1111.md  character_sheet.md  chub_rules.md  do_commit.sh  docker-compose.yml  eslint.config.mjs  index.html  intro_page.md  mockup_gui_qt.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  rpbotgenerator.md  run_bpui.bat  run_bpui.sh  run_desktop.bat  run_desktop.sh  (+5 more)
.claude/: settings.json
.clinerules/: 00_scope_and_role.md  09_adjustment_note_and_thin_seed.md  10_format_and_isolation.md  20_user_agency_and_consent.md  30_content_modes.md  40_genre_and_tone.md  50_anti_generic.md  51_anti_moralizing_directive.md  55_no_moral_sanitizing.md  60_blueprint_hard_rules.md  70_repo_hygiene.md
.github/: copilot-instructions.md
assets/: About-B8Vyitbh.js  About-B8Vyitbh.js.map  About-BAMK9D6j.js  About-BAMK9D6j.js.map  About-BO_qWdZT.js  About-BO_qWdZT.js.map  About-Bi6jBbBY.js  About-Bi6jBbBY.js.map  About-Bzw4XYxO.js  About-Bzw4XYxO.js.map  About-C-UHizt7.js  About-C-UHizt7.js.map  About-CC7-knVG.js  About-CC7-knVG.js.map  About-CQer85jU.js  About-CQer85jU.js.map  About-CrT-m8pW.js  About-CrT-m8pW.js.map  About-CxGJjZzG.js  About-CxGJjZzG.js.map  About-DRKC881y.js  About-DRKC881y.js.map  (+2127 more)
(+330 files in other folders)
